--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto', sans-serif;
+  overflow-x: auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p, h1, h2, h3 {
+  margin: 0;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.options_menu {
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: 5px;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  border-radius: 25px;
+}
+
+.options_menu:hover {
+  background-color: #f2f2f2;
+}
+
+.options_menu:before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 5px;
+  right: 50%;
+  transform: translateX(50%);
+  height: 4px;
+  width: 4px;
+  border-radius: 100px;
+  background-color: #000;
+}
+
+.options_menu:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  bottom: 5px;
+  right: 50%;
+  transform: translateX(50%);
+  height: 4px;
+  width: 4px;
+  border-radius: 100px;
+  background-color: #000;
+}
+
