--- a/src/components/CardItem/style.css
+++ b/src/components/CardItem/style.css
@@ -1,8 +1,16 @@
 h3 {
     position: relative;
+    display: inline-block;
     font-size: 16px;
     font-weight: 500;
+    margin-top: 5px;
     margin-bottom: 0;
+}
+
+img {
+    position: relative;
+    float: right;
+    top: 10px;
 }
 
 h3 .options_menu {
